--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SPS5000X Power Supply</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <title>Siglent SPS5000X</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" />
   <!-- Theme: inline to avoid flash -->
   <script>
@@ -38,6 +38,14 @@
 <body>
   <!-- ── Toolbar ──────────────────────────────────────────── -->
   <nav class="toolbar">
+    <!-- Brand -->
+    <div class="toolbar-brand">
+      <div>
+        <div class="toolbar-brand-name">Siglent</div>
+        <div class="toolbar-brand-model">SPS5000X</div>
+      </div>
+    </div>
+
     <!-- Connection -->
     <div class="toolbar-group">
       <span class="status-dot" id="statusDot"></span>
